Update title in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exmind Digital | Website Dalam Pengembangan</title>
+    <title>Website Dalam Pengembangan Powered By Exmind Digital</title>
 
     <style>
         * {
